# imitation

./: .gitignore  pyproject.toml
src/imitation/algorithms/: bc.py  dagger.py
src/imitation/policies/: base.py
src/imitation/util/: util.py
